created prepopulated dropdown

--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -1,42 +1,32 @@
-<%= form_with(model: flight) do |form| %>
-  <% if flight.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
-
-      <ul>
-        <% flight.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :departure_airport_id, style: "display: block" %>
-    <%= form.number_field :departure_airport_id %>
+<%= form_with url: "/flights", method: :get do |f| %>
+  <div class="form-field">
+    <%= f.label "From" %>
+    <%= f.select(:departure_airport_id,
+                 options_for_select(@airport_options, params[:departure_airport_id])) %>
   </div>
 
-  <div>
-    <%= form.label :arrival_airport_id, style: "display: block" %>
-    <%= form.number_field :arrival_airport_id %>
+  <div class="form-field">
+    <%= f.label "To" %>
+    <%= f.select(:arrival_airport_id,
+                 options_for_select(@airport_options, params[:arrival_airport_id])) %>
   </div>
 
-  <div>
-    <%= form.label :date, style: "display: block" %>
-    <%= form.date_field :date %>
+  <div class="form-field">
+    <%= f.label "Passengers" %>
+    <%= f.select(:passenger_count,
+                 options_for_select([1, 2, 3, 4], params[:passenger_count]),
+                 required: true ) %>
   </div>
 
-  <div>
-    <%= form.label :time, style: "display: block" %>
-    <%= form.time_field :time %>
+  <div class="form-field">
+    <%= f.label "Date" %>
+    <%= f.date_field :date,
+                      value: params[:date],
+                      required: true,
+                      placeholder: "dd/mm/yyyy" %>
   </div>
 
-  <div>
-    <%= form.label :duration, style: "display: block" %>
-    <%= form.number_field :duration %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+  <div class="form-button">
+    <%= f.submit "Find Flights" %>
   </div>
 <% end %>
