--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,14 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Flights</h1>
+<h1>Choose a flight</h1>
 
-<div id="flights">
-  <% @flights.each do |flight| %>
-    <%= render flight %>
-    <p>
-      <%= link_to "Show this flight", flight %>
-    </p>
-  <% end %>
-</div>
+<%= render "form", flight: @flight %>
 
 <%= link_to "New flight", new_flight_path %>
