searches and displays available flights

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -4,4 +4,9 @@
 
 <%= render "form", flight: @flight %>
 
-<%= link_to "New flight", new_flight_path %>
+
+<h1>Flight Options</h1>
+
+
+<%= render "search_results" %>
+
