--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,27 +1,20 @@
-<%= form_with(model: booking) do |form| %>
-  <% if booking.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
+<%= form_with model: @booking do |form| %>
+  <h2>Enter passenger info:</h2>
+  <ul>
 
-      <ul>
-        <% booking.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :flight_id, style: "display: block" %>
-    <%= form.number_field :flight_id %>
-  </div>
-
-  <div>
-    <%= form.label :passenger_id, style: "display: block" %>
-    <%= form.number_field :passenger_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= form.hidden_field :booking_option, :value => params[:booking_option] %>
+  <%= form.hidden_field :passenger_count, :value => params[:passenger_count] %>
+  
+ 
+    <%= form.fields_for :passengers do |booking_form| %>
+      <li>
+        <%= booking_form.label :name %>
+        <%= booking_form.text_field :name %>
+        <%= booking_form.label :email %>
+        <%= booking_form.text_field :email %>
+       
+      </li>
+    <% end %>
+  </ul>
+  <%= form.submit "Finalize Booking" %>
 <% end %>
